# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

if (is_android) {
  import("//build/config/android/config.gni")
}

# TODO(sky): nuke this. Temporary while sorting out http://crbug.com/465456.
enable_correct_v8_arch = false

# V8 extras
# Adding V8 extras files requires API owners review
# Be sure to synchronize with build/common.gypi

v8_extra_library_files = [
  "//third_party/WebKit/Source/core/streams/ByteLengthQueuingStrategy.js",
  "//third_party/WebKit/Source/core/streams/CountQueuingStrategy.js",
  "//third_party/WebKit/Source/core/streams/ReadableStream.js",
]
v8_experimental_extra_library_files =
    [ "//third_party/WebKit/Source/core/streams/WritableStream.js" ]

v8_enable_inspector_override = true
